@@ -1,3 +1,7 @@
+2023-05-17  Matteo Corti  <matteo@corti.li>
+
+        * tmstatus.sh: Prints a short message during wait times
+
 2023-05-04  Matteo Corti  <matteo@corti.li>
 
         * tmstatus.sh (status): fix if no speed is available
